test_suite5/ALAN/test_suite/alan-2022-examples/passing/000341_pair.alan
source L begin while 05676 do leave end end
