test_suite5/ALAN/test_suite/alan-2022-examples/failing/006120_mutation.alan
source q begin leave 851 > * 43 end
